--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800;900&display=swap" rel="stylesheet">
     <script>
+      // إعدادات الثيم الأساسية قبل تحميل التطبيق
       tailwind.config = {
         theme: {
           extend: {
@@ -33,20 +34,33 @@
       body { 
         font-family: 'Tajawal', sans-serif; 
         background-color: var(--brand-bg);
+        margin: 0;
       }
       
-      @media print {
-        @page { 
-          size: A4; 
-          margin: 0; 
-        }
-        
-        /* إخفاء التطبيق بالكامل أثناء الطباعة لمنع تداخل العناصر */
-        #root > div:not(.print-only) {
-          display: none !important;
-        }
+      /* منع ظهور الفراغات قبل تحميل React */
+      #root:empty {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        background-color: #E9EFEC;
+      }
+      #root:empty::after {
+        content: "";
+        width: 40px;
+        height: 40px;
+        border: 4px solid #16423C;
+        border-top-color: transparent;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+      @keyframes spin {
+        to { transform: rotate(360deg); }
+      }
 
-        /* إظهار حاوية الطباعة فقط بجودة عالية */
+      @media print {
+        @page { size: A4; margin: 0; }
+        #root > div:not(.print-only) { display: none !important; }
         .print-only {
           display: block !important;
           visibility: visible !important;
@@ -54,40 +68,30 @@
           left: 0 !important;
           top: 0 !important;
           width: 100% !important;
-          margin: 0 !important;
-          padding: 0 !important;
           background: white !important;
         }
-
-        .no-print {
-          display: none !important;
-        }
-
-        /* تحسين طباعة الألوان والخلفيات */
-        * {
-          -webkit-print-color-adjust: exact !important;
-          print-color-adjust: exact !important;
-          color-adjust: exact !important;
-        }
+        .no-print { display: none !important; }
+        * { -webkit-print-color-adjust: exact !important; print-color-adjust: exact !important; }
       }
-
-      /* الحالة الافتراضية في المتصفح */
       .print-only { display: none; }
     </style>
     <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.463.0?external=react",
+    "react-router-dom": "https://esm.sh/react-router-dom@7.1.3?external=react,react-dom",
+    "recharts": "https://esm.sh/recharts@2.15.0?external=react,react-dom",
+    "axios": "https://esm.sh/axios@1.7.9",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0",
-    "axios": "https://esm.sh/axios@^1.13.5"
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
 }
 </script>
-</head>
+    <script type="module" src="./index.tsx"></script>
+  </head>
   <body class="bg-brand-bg text-slate-900">
     <div id="root"></div>
   </body>
